[project]
name = "Load"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
ice = "load.cli:ice_breaking" 
