[project]
name = "Load"
version = "2.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
    "pyarrow>=17.0.0",
    "transform @ git+https://github.com/play-gogo/transform.git@d2.0.0/test",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
load_data = 'load.load:load'

[tool.pytest.ini_options]
pythonpath = [".", "src"]
